--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,9 @@
 DEBUG = 1
 SECRET_KEY = 'h@+rd87(1y9k-rx3kft+a2$ly@6^j5(9ip7^99!4g-(dpswq24'
 DJANGO_ALLOWED_HOSTS = localhost 127.0.0.1 [::1]
+SQL_ENGINE=django.db.backends.postgresql
+SQL_DATABASE=do_it_django_dev
+SQL_USER=do_it_django_db_user
+SQL_PASSWORD=do_it_django_db_password
+SQL_HOST=db
+SQL_PORT=5432
