--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-allauth==0.44.0
 django-crispy-forms==1.11.2
 django-extensions==3.1.1
 django-markdownx==3.0.1
+django-summernote==0.8.11.6
 gunicorn==20.1.0
 idna==2.10
 ipython==7.22.0
